--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Ecom Laptop</title>
+    <title>SapTopNghiep</title>
   </head>
   <body class="min-h-screen bg-slate-50">
     <div id="root"></div>
